Fix navigation collapse animation

--- a/src/scss/layouts/nav/_nav.scss
+++ b/src/scss/layouts/nav/_nav.scss
@@ -2,7 +2,7 @@
 .nav-container {
     position: fixed;
     top: 10px;
-    width: 98%;
+    width: 98vw;
     height: 70px;
     margin: 0 1%;
     background-color: transparent;
@@ -108,13 +108,20 @@
     .navbar-collapse {
         position: absolute;
         top: 70px;
-        height: calc(100vh - 100px);
+        height: calc(100vh - 100px) !important;
         width: 95vw;
         left: 2vw;
         margin-top: 10px;
         box-shadow: 0 0 6px rgba($color: #000000, $alpha: 0.6);
         border-radius: 25px;
         background-color: $color-body;
+        transition: height .6s;
+
+        &:not(.show) {
+            display: block;
+            height: 0 !important;
+            transition: height $animation-speed;
+        }
 
         .nav-link {
             &.nav-link--home,
@@ -134,6 +141,16 @@
     .nav {
         justify-self: flex-end;
         align-items: center;
+    }
+
+    .nav-item {
+        opacity: 0;
+        transition: opacity .5s;
+
+        &.animate-nav-item {
+            opacity: 1;
+            transition: opacity $animation-speed;
+        }
     }
 
     .nav-link {
@@ -165,15 +182,35 @@
         }
     }
 
-    .navbar-nav .nav-link {
-        color: $color-text;
-
-        &:focus {
-            color: $color-text;
+    .navbar-nav {
+        &:not(.show-nav-content) {
+            display: none;
         }
 
-        &.active {
+        .nav-link {
             color: $color-text;
+
+            &:focus {
+                color: $color-text;
+            }
+
+            &.active {
+                color: $color-text;
+            }
+        }
+    }
+
+    .social-list-nav {
+        opacity: 0;
+        transition: opacity .6s;
+
+        &:not(.show-nav-content) {
+            display: none;
+        }
+
+        &.animate-nav-content {
+            opacity: 1;
+            transition: opacity $animation-speed;
         }
     }
 
@@ -233,11 +270,21 @@
 
         .nav-logo {
             box-shadow: none;
-            font-size: 42px;
+            font-size: 38px;
         }
 
         .navbar-toggler {
             display: none;
+        }
+
+        .navbar-collapse {
+            &:not(.show) {
+                height: auto !important;
+
+                .navbar-nav {
+                    display: flex;
+                }
+            }
         }
 
         .navbar-nav {
@@ -247,11 +294,12 @@
 
             .nav-item {
                 flex: 0 0 auto;
+                opacity: 1;
             }
 
             .nav-link {
                 color: $color-text-light;
-                font-size: 32px;
+                font-size: 28px;
                 font-weight: $font-weight-normal;
 
                 &.nav-link--home,
@@ -297,6 +345,20 @@
             border-radius: 0;
             background-color: transparent;
             padding: 25px;
+        }
+    }
+}
+
+@include media-breakpoint-up(xl) {
+    .nav-container {
+        .nav-logo {
+            font-size: 42px;
+        }
+
+        .navbar-nav {
+            .nav-link {
+                font-size: 32px;
+            }
         }
     }
 }
